--- a/personal-website-main/client/.github/workflows/azure-static-web-apps.yml
+++ b/personal-website-main/client/.github/workflows/azure-static-web-apps.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main
 
 jobs:
   build_and_deploy:
@@ -12,13 +16,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build And Deploy
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Build and Deploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
           app_location: "client"
-          output_location: "client/.next"
+          api_location: ""         # no API in your case
           app_build_command: "npm install && npm run build"
-
+          app_artifact_location: "client/dist"
