--- a/personal-website-main/client/.github/workflows/azure-static-web-apps.yml
+++ b/personal-website-main/client/.github/workflows/azure-static-web-apps.yml
@@ -3,31 +3,32 @@ name: Azure Static Web Apps CI/CD
 on:
   push:
     branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
-    branches:
-      - main
+      - main   # or your default branch
 
 jobs:
-  build_and_deploy:
+  build_and_deploy_job:
     runs-on: ubuntu-latest
-    name: Build and Deploy Job
     steps:
       - uses: actions/checkout@v3
-
-      - name: Setup Node.js
+      
+      - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '18'   # or your preferred Node.js version
+      
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./personal-website-main/client
+      
+      - name: Build
+        run: npm run build
+        working-directory: ./personal-website-main/client
 
-      - name: Build and Deploy
+      - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "client"
-          api_location: ""         # no API in your case
-          app_build_command: "npm install && npm run build"
-          app_artifact_location: "client/dist"
+          app_location: "personal-website-main/client"     # Location of your app code
+          output_location: "personal-website-main/client/dist"  # Vite's build output folder
